tests/error/struct_errors/func_overrides_field1.err
Error: Duplicate field (at $FILE:13:4)
   | 
11 | 
12 |     @guppy(module)
13 |     def x(self: "MyStruct") -> int:
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |         return 0
   | ^^^^^^^^^^^^^^^^ Struct `MyStruct` already contains a field named `x`

Guppy compilation failed due to 1 previous error
